<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppThemeLight"
    tools:context="hu.drorszagkriszaxel.popularmovies.DetailsActivity" >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tolbar_details"
        app:title="@string/app_details_layout_name"
        android:gravity="end"
        android:theme="@style/DetailsToolbar">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/imagebutton_favourite_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/star_default" />
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tolbar_details"
        android:id="@+id/sv_info_zone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_content_zone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_title"
                android:theme="@style/TextViewTitle"
                android:textAlignment="center"
                tools:text="Title"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_original_title"
                android:theme="@style/TextViewOriginalTitle"
                android:textAlignment="viewEnd"
                android:gravity="end"
                tools:text="Original Title"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_image_zone">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/image_poster"
                    android:theme="@style/ImagePoster"
                    android:contentDescription="@string/cd_image_poster"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:id="@+id/ll_info_zone">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_label_release_date"
                        android:theme="@style/TextViewLabels"
                        android:text="@string/label_release_date"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_value_release_date"
                        android:theme="@style/TextViewValues"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        tools:text="Release date value"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_label_vote_average"
                        android:theme="@style/TextViewLabels"
                        android:text="@string/label_voted_average"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_value_vote_average"
                        android:theme="@style/TextViewValues"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        tools:text="Vote average value"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_overview"
                android:theme="@style/TextViewOverview"
                tools:text="Overview"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_trailers"
                android:text="@string/label_trailers"
                android:theme="@style/TextViewSectionLabels"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/status_trailers"
                android:text="@string/status_downloading_trailers"
                android:theme="@style/TextViewWarnConnected" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_trailers">
            </android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_reviews"
                android:text="@string/label_reviews"
                android:theme="@style/TextViewSectionLabels"
                android:textAlignment="center" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/status_reviews"
                android:text="@string/status_downloading_reviews"
                android:theme="@style/TextViewWarnConnected" />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_reviews">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
